fixed bugs
sidebar not showing after optionBtn clicked

--- a/ggst.css
+++ b/ggst.css
@@ -64,6 +64,10 @@ em {
 h2 {
     color: #a88620;
     width: 85%;
+    max-width: 100%;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
 }
 
 .character {
@@ -491,18 +495,18 @@ input:checked+.slider:before {
     }
 
     .sidebarOverlay {
-        display: none;
         position: fixed;
         width: 100%;
         height: 100%;
         background-color: rgba(0, 0, 0, 0.7);
         opacity: 0;
         z-index: 1999;
-        transition: opacity 0.3s ease-in;
+        visibility: hidden;
+        transition: opacity 0.2s ease-in visibility 0.2s ease-in;
     }
 
     .sidebarOverlay.active {
-        display: block;
+        visibility: visible;
         opacity: 1;
     }
 
